Final Deployment - Adding CSS Grid navigation

--- a/index.html
+++ b/index.html
@@ -8,6 +8,19 @@
     <link rel="stylesheet" href="index.css">
   </head>
   <body>
+    <header>
+      <a target="_blank" href="https://kosified.github.io/CSS-GRID/">CSS GRID</a> <style>
+        a{
+          background-color: red;
+          color: white;
+          padding: 10px;
+          border-radius: 5px;
+          text-decoration: none;
+          font-size: 20px;
+        }
+
+      </style>
+    </header>
     <main>
       <div class="sedan">
         <img src="images/icon-sedans.svg" alt="">
